add reset password client
